Fix View Admin Dashboard

--- a/views/Admin/kelolapengelola/edit_pengelola.ejs
+++ b/views/Admin/kelolapengelola/edit_pengelola.ejs
@@ -14,7 +14,7 @@
                     <input type="hidden" class="id_pengelola" required name="id_pengelola">
                     <div class="form-group">
                         <label>Nama Pengelola :</label>
-                        <input type="text" id="NamaPengelola" name="NamaPengelola" class="form-control NamaPengelola"
+                        <input type="text" id="namapengelola" name="namapengelola" class="form-control namapengelola"
                             placeholder="Masukan Nama Pengelola" required>
                     </div>
                     <div class="form-group">
