--- a/views/Pengelola_wisata/kelolawisata/add_kelolawisata.ejs
+++ b/views/Pengelola_wisata/kelolawisata/add_kelolawisata.ejs
@@ -1,6 +1,6 @@
 <!-- Modal Update Product-->
 <form action="/pengelola/kelola_wisata/create" method="POST">
-    <div class="modal fade" id="add-wisata" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="add-kelolawisata" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog " role="document">
             <div class="modal-content">
@@ -18,13 +18,13 @@
                     </div>
                     <div class="form-group">
                         <label>Foto Wisata :</label>
-                        <input type="text" id="FotoWisata" name="FotoWisata" class="form-control" placeholder="Masukan Foto"
-                            required>
+                        <input type="text" id="FotoWisata" name="FotoWisata" class="form-control"
+                            placeholder="Masukan Foto" required>
                     </div>
                     <div class="form-group">
                         <label>Alamat Wisata :</label>
-                        <input type="text" id="AlamatWisata" name="AlamatWisata" class="form-control" placeholder="Masukan Alamat"
-                            required>
+                        <input type="text" id="AlamatWisata" name="AlamatWisata" class="form-control"
+                            placeholder="Masukan Alamat" required>
                     </div>
                 </div>
                 <div class="modal-footer">
