--- a/views/Pengelola_wisata/kelolawisata/view_kelolawisata.ejs
+++ b/views/Pengelola_wisata/kelolawisata/view_kelolawisata.ejs
@@ -35,7 +35,7 @@
                         <div style="margin: 0 20px 20px 20px;">
                             <!-- <button class="btn btn-success">Tambah</button> -->
                             <button type="button" class="btn btn-success" data-toggle="modal"
-                                data-target="#add-pengelola">
+                                data-target="#add-kelolawisata">
                                 Tambah
                             </button>
                         </div>
@@ -115,7 +115,7 @@
         var FotoWisata = $(this).data('FotoWisata');
         var AlamatWisata = $(this).data('AlamatWisata');
 
-        $('#edit-wisata').modal('show');
+        $('#edit-kelolawisata').modal('show');
         $('.id_wisata').val(id_wisata);
         $('.id_pengelola').val(id_pengelola);
         $('.NamaWisata').val(NamaWisata);
