--- a/views/Pengelola_wisata/partials_pengelola/sidebar.ejs
+++ b/views/Pengelola_wisata/partials_pengelola/sidebar.ejs
@@ -32,29 +32,30 @@
                 </a>
                 <ul class="treeview-menu">
                     <li class="<% if ( stuff.url == "/pengelola/kelola_wisata" ) { %> active <% } %>">
-                        <a href="/pengelola/kelola_wisata"><i class="fa fa-user"></i> <span>Kelola Data Wisata</span></a>
+                        <a href="/pengelola/kelola_wisata"><i class="fa fa-user"></i> <span>Kelola Data
+                                Wisata</span></a>
                     </li>
 
                 </ul>
-                
-                <li class="treeview active">
-                    <a href="#">
-                        <i class="fa fa-list"></i>
-                        <span>Data Feedback</span>
-                        <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li class="<% if ( stuff.url == "/pengelola/kelola_feedback" ) { %> active <% } %>">
-                            <a href="/pengelola/kelola_feedback"><i class="fa fa-user"></i> <span>Kelola Data Feedback
-                                    Wisata</span></a>
-                        </li>
-                    </ul>
-                </li>
+
+            <li class="treeview active">
+                <a href="#">
+                    <i class="fa fa-list"></i>
+                    <span>Data Feedback</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li class="<% if ( stuff.url == "/pengelola/kelolafeedback" ) { %> active <% } %>">
+                        <a href="/pengelola/kelolafeedback"><i class="fa fa-user"></i> <span>Kelola Data Feedback
+                                Wisata</span></a>
+                    </li>
                 </ul>
-           
-       
+            </li>
+        </ul>
+
+
         <!-- /.sidebar-menu -->
     </section>
     <!-- /.sidebar -->
