--- a/views/Pengelola_wisata/kelolafeedback/view_feedback.ejs
+++ b/views/Pengelola_wisata/kelolafeedback/view_feedback.ejs
@@ -2,182 +2,158 @@
 <%- include ../partials_pengelola/sidebar.ejs %>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <h1>
-            Tambah Data Pengelola wisata
-        </h1>
-        <ol class="breadcrumb">
-            <li><a href="dashboard"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-            <li class="active">Pengelola wisata</li>
-        </ol>
-        <% if(alert.message != '') { %>
-        <br>
-        <div class="alert alert-<%= alert.status %>" style="text-align: center;">
-            <strong><%= alert.message %></strong>
-        </div>
-        <% } %>
-    </section>
+  <!-- Content Header (Page header) -->
+  <section class="content-header">
+    <h1>
+      Tambah Data Pengelola wisata
+    </h1>
+    <ol class="breadcrumb">
+      <li><a href="dashboard"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+      <li class="active">Pengelola wisata</li>
+    </ol>
+    <% if(alert.message != '') { %>
+    <br>
+    <div class="alert alert-<%= alert.status %>" style="text-align: center;">
+      <strong><%= alert.message %></strong>
+    </div>
+    <% } %>
+  </section>
 
 
-    <!-- Main content -->
-    <section class="content">
+  <!-- Main content -->
+  <section class="content">
 
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="box">
-                    <!-- /.box-header -->
-                    <div class="box-header">
-                        <h3 class="box-title">Data Pengelola wisata</h3>
-                    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="box">
+          <!-- /.box-header -->
+          <div class="box-header">
+            <h3 class="box-title">Data Pengelola wisata</h3>
+          </div>
 
-                    <div class="box-body">
-                        <div style="margin: 0 20px 20px 20px;">
-                            <!-- <button class="btn btn-success">Tambah</button> -->
-                            <!-- <button type="button" class="btn btn-success" data-toggle="modal"
-                                data-target="#add-pengelola">
-                                Tambah
-                            </button> -->
-                        </div> -->
-                        <table id="feedback"  class="table table-bordered table-striped">
-                            <thead>
-                                <tr>
-                                    <th>No</th>
-                                    <th>Feedback</th>
-                                    <th>Tanggal</th>
-                                    
-                                    <th>Aksi</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <% for (let i = 0; i < feedback.length; i++ ) { %>
-                                <tr>
-                                    <td><%= i + 1 %></td>
-                                    <td><%= feedback[i].feedback %></td>
-                                    <td><%= feedback[i].tgl_isi %></td>
-                                    <td style="width: 150px;">
-                                        <!-- <a href="javascript:void(0);" type="button" class="btn btn-warning btn-sm edit"
-                                            data-id_pengelola="<%= pengelola_wisata[i].id_pengelola %>"
-                                            data-NamaPengelola="<%= pengelola_wisata[i].NamaPengelola %>"
-                                            data-email="<%= pengelola_wisata[i].email %>"
-                                            data-password="<%= pengelola_wisata[i].password %>">
-                                            <span class="glyphicon glyphicon-pencil"></span>
-                                            Edit
-                                        </a> -->
-                                        <button class="btn btn-danger btn-sm"
-                                            onclick="delete_feedback(`<%= feedback[i].id_feedback %>`)"
-                                            data-id-feedback="<%= feedback[i].id_feedback %>">
-                                            <span class="glyphicon glyphicon-remove"></span>
-                                            Hapus
-                                        </button>
-                                    </td>
-                                </tr>
-                                <% } %>
-                            </tbody>
-                        </table>
-                    </div>
-                    <!-- /.box-body -->
-                </div>
-                <!-- /.box -->
+          <div class="box-body">
+            <div style="margin: 0 20px 20px 20px;">
+              <!-- <button class="btn btn-success">Tambah</button> -->
+              <button type="button" class="btn btn-success" data-toggle="modal" data-target="#add-pengelola">
+                Tambah
+              </button>
             </div>
-            <!-- /.col -->
+            <table id="feedback" class="table table-bordered table-striped">
+              <thead>
+                <tr>
+                  <th>No</th>
+                  <th>Feedback</th>
+                  <th>Tanggal</th>
+
+                </tr>
+              </thead>
+              <tbody>
+                <% for (let i = 0; i < feedback.length; i++ ) { %>
+                <tr>
+                  <td><%= i + 1 %></td>
+                  <td><%= feedback[i].feedback %></td>
+                  <td><%= feedback[i].tgl_isi %></td>
+
+                </tr>
+                <% } %>
+              </tbody>
+            </table>
+          </div>
+          <!-- /.box-body -->
         </div>
-        <!-- /.row -->
-    </section>
-    <!-- /.content -->
+        <!-- /.box -->
+      </div>
+      <!-- /.col -->
+    </div>
+    <!-- /.row -->
+  </section>
+  <!-- /.content -->
 </div>
 
 <%- include ../partials_pengelola/footer.ejs %>
-<!-- <%- include add_pengelola.ejs %>
-<%- include edit_pengelola.ejs %> -->
 
 <!-- page script -->
 <script>
   //myscript
-      
-    $(document).ready(function () {
-        // datatable
-        // $('#pengelola_wisata').DataTable({ dom: 'Bfrtip', buttons: [ 'copy', 'csv', 'excel', 'pdf', 'print' ] });
-        // $(document).ready(function () { setTimeout(function () { $(".alert").fadeIn('slow'); }, 1500); });
-        $('#feedback').DataTable( {
-        dom: 'Blfrtip',
-        buttons: [
-       {
-           extend: 'pdf',
-           footer: true,
-           exportOptions: {
-                columns: [1,2,3]
-            }
-       },
-       {
-           extend: 'print',
-           footer: true,
-           exportOptions: {
-                columns: [1,2,3]
-            }
-       },
-       {
-           extend: 'copy',
-           footer: true,
-           exportOptions: {
-                columns: [1,2,3]
-            }
-       },
-       {
-           extend: 'csv',
-           footer: true,
-           exportOptions: {
-                columns: [1,2,3]
-            }
-          
-       },
-       {
-           extend: 'excel',
-           footer: true,
-           exportOptions: {
-                columns: [1,2,3]
-            }
-       }         
-    ]  
-    } );
 
-        // angka 3000 dibawah ini artinya pesan akan hilang dalam 3 detik setelah muncul
-        setTimeout(function () { $(".alert").fadeOut('slow'); }, 4000);
+  $(document).ready(function () {
+    // datatable
+    // $('#pengelola_wisata').DataTable({ dom: 'Bfrtip', buttons: [ 'copy', 'csv', 'excel', 'pdf', 'print' ] });
+    // $(document).ready(function () { setTimeout(function () { $(".alert").fadeIn('slow'); }, 1500); });
+    $('#feedback').DataTable({
+      dom: 'Blfrtip',
+      buttons: [
+        {
+          extend: 'pdf',
+          footer: true,
+          exportOptions: {
+            columns: [1, 2]
+          }
+        },
+        {
+          extend: 'print',
+          footer: true,
+          exportOptions: {
+            columns: [1, 2]
+          }
+        },
+        {
+          extend: 'copy',
+          footer: true,
+          exportOptions: {
+            columns: [1, 2]
+          }
+        },
+        {
+          extend: 'csv',
+          footer: true,
+          exportOptions: {
+            columns: [1, 2]
+          }
 
-        // redirect halaman catalogs
-        // function successTambah() {
-        //     window.location.replace(window.location.protocol + "//" + window.location.host + '/admin/pengelola_wisata')
-        // }
-    })
+        },
+        {
+          extend: 'excel',
+          footer: true,
+          exportOptions: {
+            columns: [1, 2]
+          }
+        }
+      ]
+    });
 
-    //showing data to e edit modal 
-    // $('#pengelola_wisata').on('click', '.edit', function () {
-    //     var id_pengelola = $(this).data('id_pengelola');
-    //     var NamaPengelola = $(this).data('NamaPengelola');
-    //     var email = $(this).data('email');
-    //     var password = $(this).data('password');
+    // angka 3000 dibawah ini artinya pesan akan hilang dalam 3 detik setelah muncul
+    setTimeout(function () { $(".alert").fadeOut('slow'); }, 4000);
+  })
 
-    //     $('#edit-pengelola').modal('show');
-    //     $('.id_pengelola').val(id_pengelola);
-    //     $('.NamaPengelola').val(NamaPengelola);
-    //     $('.email').val(email);
-    //     $('.passowrd').val(password);
-    // });
+  //showing data to e edit modal 
+  $('#pengelola_wisata').on('click', '.edit', function () {
+    var id_pengelola = $(this).data('id_pengelola');
+    var NamaPengelola = $(this).data('NamaPengelola');
+    var email = $(this).data('email');
+    var password = $(this).data('password');
 
-    function delete_feedback(id_feedback) {
-        let IDFeedback = id_feedback;
-        console.log(IDFeedback)
-        swal({
-            title: "Data Ini Akan Hilang",
-            text: "Yakin hapus?",
-            icon: "warning",
-            buttons: true,
-            dangerMode: true
-        }).then(willDelete => {
-            if (willDelete) {
-                window.location.assign(`/pengelola/kelola_feedback/delete/${IDFeedback}`);
-            }
-        });
-    }
+    $('#edit-pengelola').modal('show');
+    $('.id_pengelola').val(id_pengelola);
+    $('.NamaPengelola').val(NamaPengelola);
+    $('.email').val(email);
+    $('.passowrd').val(password);
+  });
+
+  function delete_pengelola_wisata(id_pengelola) {
+    let IDPengelola = id_pengelola;
+    console.log(IDPengelola)
+    swal({
+      title: "Data Ini Akan Hilang",
+      text: "Yakin hapus?",
+      icon: "warning",
+      buttons: true,
+      dangerMode: true
+    }).then(willDelete => {
+      if (willDelete) {
+        window.location.assign(`/admin/pengelola_wisata/delete/${IDPengelola}`);
+      }
+    });
+  }
 
 </script>
