--- a/views/Pengelola_wisata/kelolawisata/edit_kelolawisata.ejs
+++ b/views/Pengelola_wisata/kelolawisata/edit_kelolawisata.ejs
@@ -1,6 +1,6 @@
 <!-- Modal Update Product-->
 <form action="/pengelola/kelola_wisata/edit" method="post">
-    <div class="modal fade" id="edit-wisata" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="edit-kelolawisata" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog " role="document">
             <div class="modal-content">
