--- a/views/Pengelola_wisata/partials_pengelola/header.ejs
+++ b/views/Pengelola_wisata/partials_pengelola/header.ejs
@@ -62,23 +62,39 @@
                     <span class="sr-only">Toggle navigation</span>
                 </a>
 
+
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
                         <!-- User Account: style can be found in dropdown.less -->
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-
+                                <img src="/images/adminprofile/usernull.png" height="18" width="18" class="img-circle"
+                                    alt="User Image">
+                                <% } %>
+                                <span class="hidden-xs"><% if (admin.nama_admin != null) { %>
+                                    <%= admin.nama_admin %>
+                                    <% }else{ %>
+                                    <%= "Admin" %>
+                                    <% } %></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
+                                    <img src="/images/adminprofile/usernull.png" height="18" width="18"
+                                        class="img-circle" alt="User Image">
 
+
+                                    <p> <% if (admin.nama_admin!= null) { %>
+                                        <%= admin.nama_admin %>
+                                        <% }else{ %>
+                                        <%= "Admin" %>
+                                        <% } %>
                                     </p>
                                 </li>
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
-                                        <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                        <a href="/admin/profile" class="btn btn-default btn-flat">Profile</a>
                                     </div>
                                     <div class="pull-right">
                                         <a href="/logoutadmin" class="btn btn-default btn-flat">Sign Out</a>
